--- a/public/css/app.css
+++ b/public/css/app.css
@@ -237,97 +237,331 @@ header .icons #menu-bars {
 
 /*--------------------------------------About Us--------------------------------------------------------------------------*/
 
-.about {
-    background-color: beige;
-    width: auto;
-}
-
-.me {
-    background-image: url("/img/logo.png");
-    background-repeat: no-repeat;
-    background-color: beige;
-    background-position: center;
-    /* opacity: 0.6; */
-}
 
 
-.masthead-intro {
-    /* Layout Declarations */
-    margin-bottom: 0.1em;
-    /* Typography Declarations */
-    font-family: "Gentium Book Basic", Georgia, serif;
-    font-size: 10em;
-    opacity: 1;
-}
-
-.introduction-section,
-.location-section,
-.questions-section {
-   
-    max-width: 50em;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2em;
-    opacity: 1;
-}
-
-.introduction-section>p,
-.location-section>p,
-.questions-section,
-.content-footer>p {
-    /* Typography Declarations */
-    font-size: 203%;
-    letter-spacing: 0.05em;
-    font-weight: bolder;
-    color: #000000;
-    background-color: #ffffff;
-    opacity: 0.5;
-}
-
-.questions-section>h2 {
-    font-family: "Gentium Book Basic", Georgia, serif;
-    font-size: 2.5em;
-    font-weight: bolder;
-    /* Layout */
-    margin: 2em 0 1em 0;
-    opacity: 1;
-    color: Black;
-}
-
-section>h1 {
-    margin-top: 0.6em;
-    color: #ff2348;
-    opacity: 1;
-    font-weight: bold;
-}
-
-.content-footer {
-    margin: 20px 0;
-    padding: 20px 0;
-    text-align: center;
-    background-color: #60a6de;
-    text-decoration: none;
-    opacity: 1;
-}
-
-.social>li {
-    display: inline-block;
-    margin: 0 5px;
-    opacity: 1;
-    font-weight: bold;
-}
-
-.content-footer>p3 {
-    color: #f7ede1;
-    opacity: 1;
-}
 
 a {
-    font-weight: bold;
     text-decoration: none;
-    color: #f1c863;
-    opacity: 1;
+    transition: all 0.5s ease-in-out;
 }
+
+a:hover {
+    transition: all 0.5s ease-in-out;
+}
+
+.we-are-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    width: 100%;
+    height: 900px;
+}
+
+@media screen and (max-width: 860px) {
+    .we-are-block {
+        height: 2200px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .we-are-block {
+        height: 2300px;
+    }
+}
+
+#about-us-section {
+    background: #ec4c5a;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+@media screen and (max-width: 860px) {
+    #about-us-section {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+
+.about-us-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 860px) {
+    .about-us-image {
+        position: relative;
+        width: 100%;
+        height: 45%;
+    }
+}
+
+@media screen and (max-width: 747px) {
+    .about-us-image {
+        height: 35%;
+    }
+}
+
+@media screen and (max-width: 644px) {
+    .about-us-image img {
+        position: absolute;
+        left: -220px;
+    }
+}
+
+.about-us-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-evenly;
+    width: 40%;
+    height: 80%;
+    margin-right: 850px;
+    margin-left: 12px;
+    z-index: 2;
+}
+
+@media screen and (max-width: 1353px) {
+    .about-us-info {
+        margin-right: 400px;
+        width: 60%;
+        background: #ec4c5a;
+        padding: 0px 25px 0px 0px;
+    }
+}
+
+@media screen and (max-width: 1238px) {
+    .about-us-info {
+        margin-right: 340px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1111px) {
+    .about-us-info {
+        margin-right: 270px;
+    }
+}
+
+@media screen and (max-width: 910px) {
+    .about-us-info {
+        margin-right: 150px;
+    }
+}
+
+@media screen and (max-width: 860px) {
+    .about-us-info {
+        margin: 0px 0px 0px 0px !important;
+        padding: 0px 20px 0px 20px !important;
+        width: 100%;
+        height: 55%;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 747px) {
+    .about-us-info {
+        height: 65%;
+    }
+}
+
+.about-us-info h2 {
+    color: white;
+    font-size: 40pt;
+    text-align: right;
+}
+
+@media screen and (max-width: 860px) {
+    .about-us-info h2 {
+        text-align: center;
+    }
+}
+
+.about-us-info p {
+    color: white;
+    font-size: 14pt;
+    text-align: right;
+}
+
+@media screen and (max-width: 860px) {
+    .about-us-info p {
+        text-align: center;
+    }
+}
+
+.about-us-info a {
+    background-color: white;
+    color: #ec4c5a;
+    width: 180px;
+    text-align: center;
+    padding: 15px 0px 15px 0px;
+    font-size: 14pt;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+
+.about-us-info a:hover {
+    background: #404140;
+    color: white;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    transform: translateY(10px);
+}
+
+#history-section {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+@media screen and (max-width: 860px) {
+    #history-section {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+
+.history-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 820px;
+    height: 100%;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 860px) {
+    .history-image {
+        position: relative;
+        width: 100%;
+        height: 40%;
+    }
+}
+
+@media screen and (max-width: 747px) {
+    .history-image {
+        height: 35%;
+    }
+}
+
+@media screen and (max-width: 644px) {
+    .history-image img {
+        position: absolute;
+        right: -220px;
+    }
+}
+
+.history-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    width: 40%;
+    height: 80%;
+    margin-left: 850px;
+    margin-right: 12px;
+    z-index: 2;
+}
+
+@media screen and (max-width: 1353px) {
+    .history-info {
+        margin-left: 400px;
+        width: 60%;
+        background: #ffffff99;
+        padding: 0px 0px 0px 25px;
+    }
+}
+
+@media screen and (max-width: 1238px) {
+    .history-info {
+        margin-left: 340px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1111px) {
+    .history-info {
+        margin-left: 270px;
+    }
+}
+
+@media screen and (max-width: 910px) {
+    .history-info {
+        margin-left: 150px;
+    }
+}
+
+@media screen and (max-width: 860px) {
+    .history-info {
+        margin: 0px 0px 0px 0px !important;
+        padding: 0px 40px 0px 40px !important;
+        width: 100%;
+        height: 60%;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 747px) {
+    .history-info {
+        height: 65%;
+    }
+}
+
+.history-info h2 {
+    color: #ec4c5a;
+    font-size: 40pt;
+    text-align: left;
+}
+
+@media screen and (max-width: 860px) {
+    .history-info h2 {
+        text-align: center;
+    }
+}
+
+.history-info p {
+    color: #ec4c5a;
+    font-size: 14pt;
+    text-align: left;
+}
+
+@media screen and (max-width: 860px) {
+    .history-info p {
+        text-align: center;
+    }
+}
+
+.history-info a {
+    background-color: #f86374;
+    color: white;
+    width: 180px;
+    text-align: center;
+    padding: 15px 0px 15px 0px;
+    font-size: 14pt;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+
+.history-info a:hover {
+    background: #404140;
+    color: white;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    transform: translateY(10px);
+}
+
+
 
 @media only screen and (max-width: 500px) {
     .masthead {
@@ -347,7 +581,7 @@ a {
     section>h1 {
         font-size: 2.5em;
     }
-} */
+}
 /*hbhkjbkbkbkkbkjkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk*/
 .home{
     background-color: beige;
@@ -356,31 +590,31 @@ a {
     background-color: beige;
     min-height: 720px;
   }
-  
+
   .u-section-1 .u-layout-wrap-1 {
     margin-top: 60px;
     margin-bottom: -232px;
     margin-left: auto;
   }
-  
+
   .u-section-1 .u-image-1 {
     min-height: 600px;
     background-image: url("images/pexels-pixabay-259239.jpg");
     background-position: 50% 50%;
   }
-  
+
   .u-section-1 .u-container-layout-1 {
     padding: 30px;
   }
-  
+
   .u-section-1 .u-layout-cell-2 {
     min-height: 600px;
   }
-  
+
   .u-section-1 .u-container-layout-2 {
     padding: 30px 60px;
   }
-  
+
   .u-section-1 .u-text-1 {
     font-weight: 700;
     font-size: 3rem;
@@ -388,20 +622,20 @@ a {
     text-transform: none;
     margin: 51px auto 0 0;
   }
-  
+
   .u-section-1 .u-line-1 {
     width: 360px;
     height: 0;
     margin: 19px auto 0 0;
   }
-  
+
   .u-section-1 .u-text-2 {
     letter-spacing: 0px;
     line-height: 2;
     font-size: 3rem;
     margin: 43px 0 0;
   }
-  
+
   .u-section-1 .u-btn-1 {
     border-style: none;
     font-weight: 700;
@@ -410,96 +644,96 @@ a {
     margin: 19px auto 0 0;
     padding: 0;
   }
-  
+
   @media (max-width: 1199px) {
     .u-section-1 .u-sheet-1 {
       min-height: 663px;
     }
-  
+
     .u-section-1 .u-layout-wrap-1 {
       margin-bottom: -184px;
       margin-left: initial;
     }
-  
+
     .u-section-1 .u-image-1 {
       min-height: 495px;
     }
-  
+
     .u-section-1 .u-layout-cell-2 {
       min-height: 495px;
     }
-  
+
     .u-section-1 .u-text-1 {
       margin-top: 0;
     }
-  
+
     .u-section-1 .u-line-1 {
       width: 350px;
     }
   }
-  
+
   @media (max-width: 991px) {
     .u-section-1 .u-sheet-1 {
       min-height: 727px;
     }
-  
+
     .u-section-1 .u-layout-wrap-1 {
       margin-bottom: -4px;
       margin-left: initial;
     }
-  
+
     .u-section-1 .u-image-1 {
       min-height: 379px;
     }
-  
+
     .u-section-1 .u-layout-cell-2 {
       min-height: 100px;
     }
-  
+
     .u-section-1 .u-container-layout-2 {
       padding-left: 30px;
       padding-right: 30px;
     }
-  
+
     .u-section-1 .u-line-1 {
       width: 300px;
     }
   }
-  
+
   @media (max-width: 767px) {
     .u-section-1 .u-sheet-1 {
       min-height: 1081px;
     }
-  
+
     .u-section-1 .u-layout-wrap-1 {
       margin-bottom: 60px;
       margin-left: initial;
     }
-  
+
     .u-section-1 .u-image-1 {
       min-height: 569px;
     }
-  
+
     .u-section-1 .u-container-layout-1 {
       padding-left: 10px;
       padding-right: 10px;
     }
-  
+
     .u-section-1 .u-container-layout-2 {
       padding-left: 10px;
       padding-right: 10px;
     }
   }
-  
+
   @media (max-width: 575px) {
     .u-section-1 .u-sheet-1 {
       min-height: 870px;
     }
-  
+
     .u-section-1 .u-image-1 {
       min-height: 358px;
     }
-  
+
     .u-section-1 .u-text-1 {
       font-size: 1.5rem;
     }
@@ -605,208 +839,64 @@ header .icons .dropdown .cart-count {
 
 
 /*---------------------------------------------------Booking Page css---------------------------------------------------------------------------------*/
-
 .boo {
-    background-image: linear-gradient(to right, #d78897, #dec0c2);
-}
+    margin-left: 400px;
 
-.section {
-    position: relative;
-    height: 100vh;
-}
 
+}
 .section .section-center {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-0%);
+    transform: translateY(-0%)
 }
-
-#booking {
-    font-family: "Raleway", sans-serif;
-}
-
 .booking-form {
     position: relative;
-    max-width: 642px;
+    max-width: 800px;
     width: 100%;
     margin: auto;
-    padding: 40px;
+    padding: 200px;
     overflow: hidden;
-    background-image: url("/img/logo.png");
+    //background-image: url("/img/logo.png");
+    background-image: linear-gradient(to right, #e15666, #fdc087);
     background-size: cover;
-    border-radius: 5px;
-    z-index: 20;
-}
+    border-radius: 20px;
 
-.booking-form::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    background: rgba(105, 49, 49, 0.7);
-    z-index: -1;
 }
-
 .booking-form .form-header {
     text-align: center;
     position: relative;
     margin-bottom: 30px;
 }
-
 .booking-form .form-header h1 {
     font-weight: 700;
     text-transform: capitalize;
     font-size: 42px;
-    margin: 0px;
-    color: #fff;
 }
-
 .booking-form .form-group {
     position: relative;
     margin-bottom: 30px;
 }
-
 .booking-form .form-control {
     background-color: rgba(255, 255, 255, 0.2);
     height: 60px;
     padding: 0px 25px;
     border: none;
     border-radius: 40px;
-    color: #fff;
+    color: #000000;
     -webkit-box-shadow: 0px 0px 0px 2px transparent;
     box-shadow: 0px 0px 0px 2px transparent;
     -webkit-transition: 0.2s;
     transition: 0.2s;
 }
-
-.custom-select {
-    background-color: rgba(255, 255, 255, 0.2);
-    height: 60px;
-    padding: 0px 25px;
-    border: none;
-    border-radius: 40px;
-    color: black;
-    -webkit-box-shadow: 0px 0px 0px 2px transparent;
-    box-shadow: 0px 0px 0px 2px transparent;
-    -webkit-transition: 0.2s;
-    transition: 0.2s;
-}
-
-.booking-form .form-control::-webkit-input-placeholder {
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.booking-form .form-control:-ms-input-placeholder {
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.booking-form .form-control::placeholder {
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.booking-form .form-control:focus {
-    -webkit-box-shadow: 0px 0px 0px 2px #ff8846;
-    box-shadow: 0px 0px 0px 2px #ff8846;
-}
-
-.booking-form input[type="date"].form-control {
-    padding-top: 16px;
-}
-
-.booking-form input[type="date"].form-control:invalid {
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.booking-form input[type="date"].form-control+.form-label {
-    opacity: 1;
-    top: 10px;
-}
-
-.booking-form select.form-control {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-}
-
-.booking-form select.form-control:invalid {
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.booking-form select.form-control+.select-arrow {
-    position: absolute;
-    right: 15px;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-    width: 32px;
-    line-height: 32px;
-    height: 32px;
-    text-align: center;
-    pointer-events: none;
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 14px;
-}
-
-.booking-form select.form-control+.select-arrow:after {
-    content: "\279C";
-    display: block;
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
-}
-
-.booking-form select.form-control option {
-    color: #000;
-}
-
 .booking-form .form-label {
-    position: absolute;
-    top: -10px;
-    left: 25px;
-    opacity: 0;
-    color: #ff8846;
-    font-size: 11px;
+
+    color: #6408e3;
+    font-size: 16px;
     font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1.3px;
-    height: 15px;
-    line-height: 15px;
-    -webkit-transition: 0.2s all;
-    transition: 0.2s all;
-}
 
-.test {
-    position: relative;
-    top: -1px;
-    left: 10px;
-    opacity: 01;
-    color: #ff8846;
-    font-size: 11px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 1.3px;
-    height: 15px;
-    line-height: 15px;
-    -webkit-transition: 0.2s all;
-    transition: 0.2s all;
 }
-
-.booking-form .form-group.input-not-empty .form-control {
-    padding-top: 16px;
-}
-
-.booking-form .form-group.input-not-empty .form-label {
-    opacity: 0.5;
-    top: 10px;
-}
-
 .booking-form .submit-btn {
     color: #fff;
-    background-color: #e35e0a;
+    background-color: #ee3361;
     font-weight: 700;
     height: 60px;
     padding: 10px 30px;
@@ -814,15 +904,14 @@ header .icons .dropdown .cart-count {
     border-radius: 40px;
     border: none;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 20px;
     letter-spacing: 1.3px;
     -webkit-transition: 0.2s all;
-    transition: 0.2s all;
+    transition: 0.2s all
 }
-
 .booking-form .submit-btn:hover,
 .booking-form .submit-btn:focus {
-    opacity: 0.9;
+    opacity: 0.2;
 }
 
 
@@ -833,6 +922,21 @@ header .icons .dropdown .cart-count {
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap: 1.5rem;
 }
+
+.custom-select {
+    background-color: rgba(105, 49, 49, 0.7);
+    height: 60px;
+    padding: 0px 25px;
+    border: none;
+    border-radius: 40px;
+    color: #ffffff;
+    -webkit-box-shadow: 0px 0px 0px 2px transparent;
+    box-shadow: 0px 0px 0px 2px transparent;
+    -webkit-transition: 0.2s;
+    transition: 0.2s
+}
+
+
 
 
 /* media queries */
@@ -848,6 +952,76 @@ header .icons .dropdown .cart-count {
 
 
 /* ================================================== */
+/*++++++++++++++++++++++++++++++++++++++++++++++++Footer++++++++++++++++++++++++++++*/
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+
+.footer {
+    padding: 40px 0;
+    background-color: #e15666;
+}
+
+.footer .social {
+    text-align: center;
+    padding-bottom: 25px;
+    color: #4b4c4d;
+}
+
+.footer .social a {
+    font-size: 24px;
+    color: inherit;
+    border: 1px solid #e15666;
+    width: 40px;
+    height: 40px;
+    line-height: 38px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    margin: 0 8px;
+    opacity: 0.75;
+}
+
+.footer .social a:hover {
+    opacity: 0.9;
+}
+
+.footer ul {
+    margin-top: 0;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+}
+
+.footer ul a {
+    color: inherit;
+    text-decoration: none;
+    opacity: 0.8;
+}
+
+.footer ul li {
+    display: inline-block;
+    padding: 0 15px;
+}
+
+.footer ul a:hover {
+    opacity: 1;
+}
+
+.footer .copyright {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 13px;
+    color: #aaa;
+}
 
 
 /* ================================================== */
@@ -933,3 +1107,5 @@ header .icons .dropdown .cart-count {
     grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
     gap: 1.5rem;
 }
+
+/*booking test */
